--- a/demo1/index.html
+++ b/demo1/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
   <title>three_vite</title>
   <link rel="icon" href="favicon.png">
-  <link rel="stylesheet" href="./main.css">
+  <script type="module" crossorigin src="/demo/assets/demo1-BK9rJPgC.js"></script>
+  <link rel="stylesheet" crossorigin href="/demo/assets/demo1-Dwsp8QLK.css">
 </head>
 
 <body>
@@ -14,7 +15,6 @@
   <!--
   <script src="./jsm/libs/ammo.wasm.js"></script>
   -->
- <script type="module" src="./main.js"></script>
 </body>
 
 </html>
