--- a/demo1/index.html
+++ b/demo1/index.html
@@ -15,14 +15,14 @@
   <script type="x-shader/x-vertex" id="vertexShader">
 
 
-    uniform vec2[20] k_array;
-    uniform float[20] omega_array;
+    #define order 25
+    uniform vec2[order] k_array;
+    uniform float[order] omega_array;
     uniform float amplitude_factor;
     uniform float amplitude;
 
     uniform float t;
 
-    int order = 20;
 
     varying vec3 vWorldPosition;
     varying vec3 fragNormal;
