--- a/square/index.html
+++ b/square/index.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
   <title>three_vite</title>
   <link rel="icon" href="favicon.png">
-  <script type="module" crossorigin src="/demo/assets/demo1-DNiRktLn.js"></script>
+  <link rel="stylesheet" href="./main.css">
+  <script type="module" crossorigin src="/demo/assets/square-qFtqrO0S.js"></script>
   <link rel="modulepreload" crossorigin href="/demo/assets/OrbitControls-CADhgz7X.js">
-  <link rel="stylesheet" crossorigin href="/demo/assets/demo1-Dwsp8QLK.css">
 </head>
 
 <body>
