deploy: a94d17b5bf6c6b8c847d96688f4a72aef4b9e20a

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Démo Web</title>
   <link rel="stylesheet" crossorigin href="/demo/assets/main-Ws9qDrUM.css">
 </head>
+
 <body>
   <header>
     <h1>Bienvenue sur la page de démo</h1>
@@ -19,17 +21,18 @@
       <p>Description rapide de la démo.</p>
     </a>
 
-    <!-- <a href="demo2/index.html" class="demo-card">
+    <a href="swimming/index.html" class="demo-card">
       <img src="images/demo2-preview.png" alt="Démo 2" />
       <h2>Démo 2</h2>
       <p>Description rapide de la démo.</p>
     </a>
 
-    <a href="demo3/index.html" class="demo-card">
+    <!-- <a href="demo3/index.html" class="demo-card">
       <img src="images/demo3-preview.png" alt="Démo 3" />
       <h2>Démo 3</h2>
       <p>Description rapide de la démo.</p>
     </a> -->
   </main>
 </body>
+
 </html>
