--- a/swimming/index.html
+++ b/swimming/index.html
@@ -101,13 +101,13 @@ Released under the MIT license
 <body>
   <div id="loading">Loading...</div>
 
-  <img hidden="true" id="tiles" src="tiles.jpg">
-  <img hidden="true" id="flag" src="flag-texture.jpg">
-  <img hidden="true" id="xneg" src="xneg.jpg">
-  <img hidden="true" id="xpos" src="xpos.jpg">
-  <img hidden="true" id="ypos" src="ypos.jpg">
-  <img hidden="true" id="zneg" src="zneg.jpg">
-  <img hidden="true" id="zpos" src="zpos.jpg">
+  <img hidden="true" id="tiles" src="./assets/tiles.jpg">
+  <img hidden="true" id="flag" src="./assets/flag-texture.jpg">
+  <img hidden="true" id="xneg" src="./assets/xneg.jpg">
+  <img hidden="true" id="xpos" src="./assets/xpos.jpg">
+  <img hidden="true" id="ypos" src="./assets/ypos.jpg">
+  <img hidden="true" id="zneg" src="./assets/zneg.jpg">
+  <img hidden="true" id="zpos" src="./assets/zpos.jpg">
 </body>
 
 </html>
