improve main page

--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
 
 <body>
   <header>
-    <h1>Bienvenue sur la page de démo</h1>
-    <p>Choisissez une démo ci-dessous :</p>
+    <h1>Welcome on my demo page</h1>
+    <p>Choose a demo below :</p>
   </header>
 
   <main class="demo-grid">
     <a href="demo1/index.html" class="demo-card">
       <img src="images/demo1-preview.png" alt="Démo 1" />
-      <h2>Démo 1</h2>
-      <p>Description rapide de la démo.</p>
+      <h2>Ocean</h2>
+      <p>Large Ocean Rendering</p>
     </a>
 
     <a href="swimming/index.html" class="demo-card">
       <img src="images/demo2-preview.png" alt="Démo 2" />
-      <h2>Démo 2</h2>
-      <p>Description rapide de la démo.</p>
+      <h2>swimming</h2>
+      <p>Swimming simulation with situated visualizations.</p>
     </a>
 
     <!-- <a href="demo3/index.html" class="demo-card">
