deploy: 06ebde3c69adb53778e14f9ffce81b013ddbd648

--- a/demo1/index.html
+++ b/demo1/index.html
@@ -6,9 +6,10 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
   <title>three_vite</title>
   <link rel="icon" href="favicon.png">
-  <script type="module" crossorigin src="/demo/assets/demo1-Dz1xQ7I7.js"></script>
+  <script type="module" crossorigin src="/demo/assets/demo1-AgiLnLly.js"></script>
   <link rel="modulepreload" crossorigin href="/demo/assets/modulepreload-polyfill-B5Qt9EMX.js">
   <link rel="modulepreload" crossorigin href="/demo/assets/OrbitControls-DkK6GvWB.js">
+  <link rel="modulepreload" crossorigin href="/demo/assets/lil-gui.module.min-Vka56b52.js">
   <link rel="stylesheet" crossorigin href="/demo/assets/demo1-Dwsp8QLK.css">
 </head>
 
