--- a/swimming/index.html
+++ b/swimming/index.html
@@ -87,7 +87,7 @@ Released under the MIT license
       top: 10px;
       left: 10px;
       color: white;
-      font-size: 24px;
+      font-size: 10px;
       z-index: 2;
       pointer-events: none;
     }
@@ -115,6 +115,8 @@ Released under the MIT license
   <div id="loading">Loading...</div>
   <div id="overlay-text">Press 'C' to enable or disable area conservation. <br /> <br />
     Press 'J' to simulate a jump.<br /> <br />
+    Press 'P' to toggle projection grid display.<br /> <br />
+    Press 'A' to toggle area conserved grid display.<br /> <br />
     Drag on the water to start ripples.</div>
 
   <img hidden="true" id="tiles" src="/demo/assets/tiles-CyC06c8e.jpg">
