--- a/swimming/index.html
+++ b/swimming/index.html
@@ -112,6 +112,7 @@ Released under the MIT license
   <div id="loading">Loading...</div>
   <div id="overlay-text">Press 'C' to enable or disable area conservation. <br /> <br />
     Press 'J' to simulate a jump.<br /> <br />
+    Press 'S' to simulate swimming.<br /> <br />
     Press 'P' to toggle projection grid display.<br /> <br />
     Press 'A' to toggle area conserved grid display.<br /> <br />
     Drag on the water to start ripples.</div>
