--- a/swimming/index.html
+++ b/swimming/index.html
@@ -107,7 +107,7 @@ Released under the MIT license
   </style>
 
 
-<script type="module" crossorigin src="/demo/assets/swimming-DcbwNzDT.js"></script>
+<script type="module" crossorigin src="/demo/assets/swimming-DhS-0D55.js"></script>
 <link rel="modulepreload" crossorigin href="/demo/assets/modulepreload-polyfill-B5Qt9EMX.js">
 <link rel="modulepreload" crossorigin href="/demo/assets/lil-gui.module.min-Vka56b52.js">
 
@@ -115,6 +115,7 @@ Released under the MIT license
   <div id="loading">Loading...</div>
   <div id="overlay-text">Press 'C' to enable or disable area conservation. <br /> <br />
     Press 'J' to simulate a jump.<br /> <br />
+    Press 'S' to simulate swimming.<br /> <br />
     Press 'P' to toggle projection grid display.<br /> <br />
     Press 'A' to toggle area conserved grid display.<br /> <br />
     Drag on the water to start ripples.</div>
