oes texture support

--- a/swimming/index.html
+++ b/swimming/index.html
@@ -12,7 +12,7 @@ Released under the MIT license
 <head>
   <title>Swimming</title>
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-  <!-- <script type="module" src="./OES_texture_float_linear-polyfill.js"></script> -->
+  <script src="./OES_texture_float_linear-polyfill.js"></script>
   <!-- <script type="module" src="./cubemap.js"></script>
     <script type="module" src="./renderer.js"></script>
     <script type="module" src="./water.js"></script> -->
