start race option

--- a/swimming/index.html
+++ b/swimming/index.html
@@ -149,7 +149,7 @@ Released under the MIT license
     Press 'O' to set olympic settings.<br /> <br />
     Drag a video file to load it.<br /> <br />
     Press 'V' to plot video.<br /> <br />
-    Press 'W' to toggle world record wave.<br /> <br />
+    Press 'W' to start the race.<br /> <br />
     Use up and down arrow keys to adjust x resolution.<br /> <br />
     Use left and right arrow keys to adjust z resolution.<br /> <br />
     Drag on the water to start ripples. <br /> <br />
