deploy: 779859b3d0bffc38de76d76a4e0253d1966d415b

--- a/swimming/index.html
+++ b/swimming/index.html
@@ -132,7 +132,7 @@ Released under the MIT license
   </style>
 
 
-<script type="module" crossorigin src="/demo/assets/swimming-CR1oJIlp.js"></script>
+<script type="module" crossorigin src="/demo/assets/swimming-CmoDaYy8.js"></script>
 <link rel="modulepreload" crossorigin href="/demo/assets/modulepreload-polyfill-B5Qt9EMX.js">
 <link rel="modulepreload" crossorigin href="/demo/assets/lil-gui.module.min-Vka56b52.js">
 
@@ -152,7 +152,7 @@ Released under the MIT license
     Press 'O' to set olympic settings.<br /> <br />
     Drag a video file to load it.<br /> <br />
     Press 'V' to plot video.<br /> <br />
-    Press 'W' to toggle world record wave.<br /> <br />
+    Press 'W' to start the race.<br /> <br />
     Use up and down arrow keys to adjust x resolution.<br /> <br />
     Use left and right arrow keys to adjust z resolution.<br /> <br />
     Drag on the water to start ripples. <br /> <br />
