added swimmer speed visualization

--- a/swimming/index.html
+++ b/swimming/index.html
@@ -159,7 +159,8 @@ Released under the MIT license
 
 
   <img hidden="true" id="tiles" src="./assets/tiles.jpg">
-  <img hidden="true" id="flag" src="./assets/franceee.jpg">
+  <img hidden="true" id="flag" src="./assets/france.jpg">
+  <img hidden="true" id="letters" src="./assets/letters.png">
   <img hidden="true" id="xneg" src="./assets/xneg.jpg">
   <img hidden="true" id="xpos" src="./assets/xpos.jpg">
   <img hidden="true" id="ypos" src="./assets/ypos.jpg">
