--- a/swimming/index.html
+++ b/swimming/index.html
@@ -132,7 +132,7 @@ Released under the MIT license
   </style>
 
 
-<script type="module" crossorigin src="/demo/assets/swimming-DunZOyqm.js"></script>
+<script type="module" crossorigin src="/demo/assets/swimming-61ZgOioc.js"></script>
 <link rel="modulepreload" crossorigin href="/demo/assets/modulepreload-polyfill-B5Qt9EMX.js">
 <link rel="modulepreload" crossorigin href="/demo/assets/lil-gui.module.min-Vka56b52.js">
 
@@ -162,7 +162,8 @@ Released under the MIT license
 
 
   <img hidden="true" id="tiles" src="/demo/assets/tiles-CyC06c8e.jpg">
-  <img hidden="true" id="flag" src="/demo/assets/flag-texture-HaLaNimp.jpg">
+  <img hidden="true" id="flag" src="/demo/assets/france-B6eZ-BRz.jpg">
+  <img hidden="true" id="letters" src="/demo/assets/letters-C1L9LzZ2.png">
   <img hidden="true" id="xneg" src="/demo/assets/xneg-DFRUa4fb.jpg">
   <img hidden="true" id="xpos" src="/demo/assets/xpos-C3S1fUeD.jpg">
   <img hidden="true" id="ypos" src="/demo/assets/ypos-CXmTcgPB.jpg">
