--- a/demo1/index.html
+++ b/demo1/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
   <title>three_vite</title>
   <link rel="icon" href="favicon.png">
-  <script type="module" crossorigin src="/demo/assets/demo1-Caqw8PYU.js"></script>
+  <script type="module" crossorigin src="/demo/assets/demo1-BCcZxn8B.js"></script>
   <link rel="modulepreload" crossorigin href="/demo/assets/modulepreload-polyfill-B5Qt9EMX.js">
   <link rel="modulepreload" crossorigin href="/demo/assets/OrbitControls-DkK6GvWB.js">
   <link rel="modulepreload" crossorigin href="/demo/assets/lil-gui.module.min-Vka56b52.js">
@@ -92,6 +92,7 @@
     uniform vec3 lightDirection;
     uniform vec3 viewPos;
     uniform float shininess;
+    uniform vec3 skyColor;
 
     varying vec3 vWorldPosition;
     varying vec3 fragPos;
@@ -148,6 +149,7 @@
       vec3 h = normalize(-lightDirection + viewDir);
       float specularStrength = pow(max(dot(h, normal), 0.0), shininess);
       vec3 specular = specularStrength * lightColor;
+      specular += vec3(0., .8, 1.);
       return specular;
     }
 
@@ -173,16 +175,17 @@
       //float h = normalize( vWorldPosition + offset ).y;
 
       //gl_FragColor = vec4((getAmbient() + getDiffuse(normal)) * deepColor, 1.0);
-      gl_FragColor = vec4((getAmbient() + getDiffuse(normal)) + getSpecular(normal), 1.0);
+      //gl_FragColor = vec4((getAmbient() + getDiffuse(normal)) + getSpecular(normal), 1.0);
+      vec3 viewDir = normalize(viewPos - fragPos);
+      float fresnel = mix(0.25, 1.0, pow(1.0 - dot(normal, viewDir), 4.0));
+      gl_FragColor = vec4(mix((getAmbient() + getDiffuse(normal)), getSpecular(normal), fresnel), 1.0);
       //gl_FragColor = vec4(0.0, 0.0, 1.0, 1.0);
 
     }
 
   </script>
 
-  <!--
-  <script src="./jsm/libs/ammo.wasm.js"></script>
-  -->
+
 
 
 
