--- a/swimming/index.html
+++ b/swimming/index.html
@@ -118,6 +118,15 @@ Released under the MIT license
       pointer-events: none;
     }
 
+    #fps {
+      top: 10px;
+      left: 10px;
+      color: purple;
+      font-size: 30px;
+      z-index: 2;
+      pointer-events: none;
+    }
+
     @media (max-width: 600px) {
       small {
         font-size: 8px;
@@ -155,6 +164,7 @@ Released under the MIT license
     Drag on the water to start ripples. <br /> <br />
     <div id="resolution">Resolution: 256 x 256</div>
     <div hidden="true" id="warning">Area conservation should be disabled for best performance.</div>
+    <div id="fps"></div>
   </div>
 
 
